# django-boilerplate

./: .env.example  AGENTS.md  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.mjs
_front/scss/: admin.scss
conf/settings/: project.py
