[project]
name = "django-vat-boilerplate"
version = "0.2.0"
description = "Simple and effective Django boilerplace with Vite, Alpine.js and Tailwind. Dockerfile ready for production."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django==6.*",
    "django-admin-interface>=0.31.1",
    "django-admin-sortable2>=2.3",
    "django-cotton>=2.5.1",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-filer>=3.4.1",
    "django-tinymce>=5.0.0",
    "django-vite>=3.1.0",
    "django-storages[boto3]>=1.14",
    "djangoql>=0.18.1",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "docutils>=0.22",
    "drf-spectacular>=0.29.0",
    "easy-thumbnails>=2.10.1",
    "gunicorn>=23.0.0",
    "markdown>=3.10",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pytz==2025.2",
    "tzdata==2025.3",
    "whitenoise>=6.11.0",
]
